Header Added to Index.Html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Git-Practice</title>
 </head>
 <body>
+    <h1>welcome to Feature/one Branch</h1>
     <h1>Hello Everyone!! Its me Abhishek Thapa</h1>
 
    <p> This is the place where i would like to create my one portfolio website and deploy here.</p>
